# computer-vision-examples

./: .gitignore  README.md  opencv_install_macos.sh
FacialLandmark/: CMakeLists.txt  README.md  facial_landmark.cc  facial_landmark_notebook.ipynb  include_libraries.h  xeus_cling_test.ipynb
HuMoments/: CMakeLists.txt  README.md  hu_moments.cc  hu_moments.py  shape_matcher.cc  shape_matcher.py
ImageInpainting/: CMakeLists.txt  README.md  inpaint.cc  inpaint.py
QRCode/: CMakeLists.txt  README.md  qr_code.cc  qr_code.py
scripts/: dlib_install_macos.sh  opencv_install_macos.sh
